force-app/main/default/objects/Lead/fields/Cluster_of_Leads__c.field-meta.xml
<CustomField>
    <fullName>Cluster_of_Leads__c</fullName>
    <label>Cluster of Leads</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Number</fullName>
            </value>
            <value>
                <fullName>DNC</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Landline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>