force-app/main/default/objects/Lead/fields/RSVP__c.field-meta.xml
<CustomField>
    <fullName>RSVP__c</fullName>
    <label>RSVP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>