force-app/main/default/objects/Lead/recordTypes/DNC.recordType-meta.xml
<RecordType>
    <fullName>DNC</fullName>
    <active>true</active>
    <businessProcess>Cluster</businessProcess>
    <label>DNC</label>
</RecordType>