force-app/main/default/objects/Lead/recordTypes/Landline.recordType-meta.xml
<RecordType>
    <fullName>Landline</fullName>
    <active>true</active>
    <businessProcess>Cluster</businessProcess>
    <label>Landline</label>
</RecordType>