force-app/main/default/objects/Lead/recordTypes/Mobile.recordType-meta.xml
<RecordType>
    <fullName>Mobile</fullName>
    <active>true</active>
    <businessProcess>Cluster</businessProcess>
    <label>Mobile</label>
</RecordType>