force-app/main/default/objects/Lead/recordTypes/No_Number.recordType-meta.xml
<RecordType>
    <fullName>No_Number</fullName>
    <active>true</active>
    <businessProcess>Cluster</businessProcess>
    <label>No Number</label>
</RecordType>