force-app/main/default/objects/Lead/listViews/Mumbai_Sales_Lead.listView-meta.xml
<ListView>
    <fullName>Mumbai_Sales_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Mumbai Sales</label>
    <queue>Mumbai_Sales</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>