force-app/main/default/objects/Lead/listViews/Pune_Sales_Lead.listView-meta.xml
<ListView>
    <fullName>Pune_Sales_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Pune Sales</label>
    <queue>Pune_Sales</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>